Fix default bugs

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="color-scheme" content="dark light" />
+
     <title>KiPPER STUDIO</title>
 
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/variables.css" />
     <link rel="stylesheet" href="./assets/css/fonts.css" />
     <link rel="stylesheet" href="./assets/css/globals.css" />
+    <link rel="stylesheet" href="./assets/css/themes.css" />
+
+    <script src="./assets/js/set-theme.js"></script>
 
     <link
       rel="stylesheet"
@@ -64,7 +70,13 @@
               <a href="#"><i class="bi bi-bell"></i></a>
             </li>
             <li>
-              <a href="#"><i class="bi bi-moon"></i></a>
+              <a href="#"
+                ><i
+                  data-theme="light"
+                  id="toggle"
+                  class="bi bi-moon theme-menu__button"
+                ></i
+              ></a>
             </li>
             <li class="accountMini">
               <a href="#" class=""></a>
@@ -83,35 +95,6 @@
             <div class="bannerBtn">
               <button>Сообщество</button>
               <button>Заказать</button>
-            </div>
-          </div>
-        </div>
-        <div class="defaultSettingBlock">
-          <div class="pictureBanner"></div>
-          <div class="descriptionBanner">
-            <div class="containerHeaderBanner">
-              <div class="imgProfile"></div>
-              <p>DreamHarakiri</p>
-            </div>
-            <p class="nameLots">Какой-то крутой мот</p>
-
-            <div class="contextCardBanner">
-              <div>
-                <p class="headerBannerCard">Время ожидания</p>
-
-                <p class="bannerCard">3д 10ч 15м</p>
-              </div>
-
-              <div>
-                <p class="headerBannerCard">Цена заказа</p>
-
-                <p class="bannerCard priceCard">1576 RUB</p>
-              </div>
-            </div>
-
-            <div class="bannerBtnCard">
-              <button>Заказать</button>
-              <button>Подробнее</button>
             </div>
           </div>
         </div>
@@ -142,7 +125,7 @@
                 <div>
                   <p class="headerCard">Время ожидания</p>
 
-                  <p class="descCard">3д 10ч 15м</p>
+                  <p class="descCard">~ 3д 10ч 15м</p>
                 </div>
 
                 <div>
@@ -163,7 +146,7 @@
                 <div>
                   <p class="headerCard">Время ожидания</p>
 
-                  <p class="descCard">3д 10ч 15м</p>
+                  <p class="descCard">~ 3д 10ч 15м</p>
                 </div>
 
                 <div>
@@ -184,7 +167,7 @@
                 <div>
                   <p class="headerCard">Время ожидания</p>
 
-                  <p class="descCard">3д 10ч 15м</p>
+                  <p class="descCard">~ 3д 10ч 15м</p>
                 </div>
 
                 <div>
@@ -205,7 +188,7 @@
                 <div>
                   <p class="headerCard">Время ожидания</p>
 
-                  <p class="descCard">3д 10ч 15м</p>
+                  <p class="descCard">~ 3д 10ч 15м</p>
                 </div>
 
                 <div>
@@ -226,7 +209,7 @@
                 <div>
                   <p class="headerCard">Время ожидания</p>
 
-                  <p class="descCard">3д 10ч 15м</p>
+                  <p class="descCard">~ 3д 10ч 15м</p>
                 </div>
 
                 <div>
@@ -247,7 +230,7 @@
                 <div>
                   <p class="headerCard">Время ожидания</p>
 
-                  <p class="descCard">3д 10ч 15м</p>
+                  <p class="descCard">~ 3д 10ч 15м</p>
                 </div>
 
                 <div>
@@ -268,7 +251,7 @@
                 <div>
                   <p class="headerCard">Время ожидания</p>
 
-                  <p class="descCard">3д 10ч 15м</p>
+                  <p class="descCard">~ 3д 10ч 15м</p>
                 </div>
 
                 <div>
