--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             class="searchInput"
             name="search"
             id=""
-            placeholder="🔎 Поиск"
+            placeholder=" Поиск"
           />
         </form>
 
