--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="#"><i class="bi bi-bookmarks"></i></a>
         </li>
         <li class="contentMenu">
-          <a href="#"><i class="bi bi-box2-heart-fill"></i></a>
+          <a href="./saved.html"><i class="bi bi-box2-heart-fill"></i></a>
         </li>
         <li class="contentMenu">
           <a href="#"><i class="bi bi-chat-square-dots"></i></a>
